inicio de sesion de operadores y empresa, algunos arreglos ams

--- a/index.html
+++ b/index.html
@@ -113,6 +113,35 @@
             const ema = document.getElementById('correoen');
             const con = document.getElementById('contraseñaen');
             firebase.auth().signInWithEmailAndPassword(ema.value, con.value).then(function(){
+                
+                uid= firebase.auth().currentUser.uid;
+                //empresas
+                firebase.database().ref("empresas/" + uid).on("value", function(snapshot){
+                   try{
+                    nombre = snapshot.val().Nombre_empresa;
+                    console.log(nombre);
+                    window.location = "home.html";
+                   }catch(error){
+                    var errorCode = error.code;
+                    var errorMessage = error.message;
+                    console.log(errorCode);
+                    console.log(errorMessage);
+                   }
+                });
+                //operadores
+                firebase.database().ref("operadores/" + uid).on("value", function(snapshot){
+                   try{
+                    nombre = snapshot.val().nombre;
+                    console.log(nombre);
+                    window.location = "operadores.html";
+                   }catch(error){
+                    var errorCode = error.code;
+                    var errorMessage = error.message;
+                    console.log(errorCode);
+                    console.log(errorMessage);
+                   }
+                });
+
                 Swal.fire({
                 position: 'top-end',
                 icon: 'success',
@@ -120,7 +149,7 @@
                 showConfirmButton: false,
                 timer: 1500
                 })
-                window.open('home.html', '_top')
+                //window.open('home.html', '_top')
                 
             }).catch(function(error) {
             // Handle Errors here.
@@ -156,8 +185,6 @@
         });
     </script>
     <script>
-        const database = firebase.database();
-        const rootRef =database.ref('empresas');
         const id = document.getElementById('Id');
         const RepresenLegal=document.getElementById('RL');
         const Email = document.getElementById('Correo');
@@ -168,32 +195,38 @@
         const imagenPerfil = document.getElementById('img');
         save.addEventListener('click', (e) => {
             e.preventDefault();
-            rootRef.child(id.value).on('value' , function(snapshot){
-                valor=snapshot.val();
-                if(id.value=="" || RepresenLegal.value=="" || Email.value=="" || NombreEmpresa.value=="" || TelefonoEmpresa.value=="" || Contraseña.value=="" || vContraseña.value=="" || imagenPerfil.value==""){ 
-                    Swal.fire({
-                    icon: 'error',
-                    title: 'Oops...',
-                    text: 'Algunos campos se encuentran vacios!'
-                    })
-                }else{
-                    if(valor==null){
-                        if (Contraseña.value == vContraseña.value){
-                            if(Contraseña.value.length<6){
-                                Swal.fire({
-                                icon: 'error',
-                                title: 'Lo sentimos...',
-                                text: 'La contraseña debe ser al menos de 6 digitos!'
-                                })
-                            }else{
-                                firebase.auth().createUserWithEmailAndPassword(Email.value, Contraseña.value).then(function(){
-                                    rootRef.child(id.value).set({
-                                        Representante_legal: RepresenLegal.value,
-                                        Email: Email.value,
-                                        Nombre_empresa: NombreEmpresa.value,
-                                        Telefono_Empresa: TelefonoEmpresa.value,
-                                        Contraseña :Contraseña.value,
-                                        imagen_perfil:imagenPerfil.value 
+            if(id.value=="" || RepresenLegal.value=="" || Email.value=="" || NombreEmpresa.value=="" || TelefonoEmpresa.value=="" || Contraseña.value=="" || vContraseña.value=="" || imagenPerfil.value==""){ 
+                Swal.fire({
+                icon: 'error',
+                title: 'Oops...',
+                text: 'Algunos campos se encuentran vacios!'
+                })
+            }else{
+                if (Contraseña.value == vContraseña.value){
+                    if(Contraseña.value.length<6){
+                        Swal.fire({
+                        icon: 'error',
+                        title: 'Lo sentimos...',
+                        text: 'La contraseña debe ser al menos de 6 digitos!'
+                        })
+                    }else{
+                        //aqui va el regsitro
+                        firebase.auth().createUserWithEmailAndPassword(Email.value, Contraseña.value).then(function(){
+                            firebase.auth().signInWithEmailAndPassword(Email.value, Contraseña.value).catch(function(error) {
+                                var errorCode = error.code;
+                                var errorMessage = error.message;
+                            });
+                            firebase.auth().onAuthStateChanged(function(user) {
+                                if (user) {
+                                    uid = firebase.auth().currentUser.uid;
+                                    firebase.database().ref("empresas/" + uid).set({
+                                        "Representante legal": RepresenLegal.value,
+                                        "Email": Email.value,
+                                        "Identificacion": id.value,
+                                        "Nombre_empresa": NombreEmpresa.value,
+                                        "Telefono_Empresa": TelefonoEmpresa.value,
+                                        "contraseña" : Contraseña.value,
+                                        "img_perfil" : imagenPerfil.value
                                     });
                                     Swal.fire({
                                     position: 'top-end',
@@ -202,48 +235,47 @@
                                     showConfirmButton: false,
                                     timer: 1500
                                     }) 
-                                }).catch(function(error) {
-                                // Handle Errors here.
-                                var errorCode = error.code;
-                                var errorMessage = error.message;
-                                console.log(errorCode);
-                                console.log(errorMessage);
-                                // ...
-                                if(errorCode=="auth/invalid-email"){
+                                }else{
                                     Swal.fire({
                                     icon: 'error',
                                     title: 'Lo sentimos...',
-                                    text: 'El correo invalido!'
+                                    text: 'No se pudo registrar el usuario!'
                                     })
-                                }else{
-                                    if(errorCode=="auth/email-already-in-use"){
-                                        Swal.fire({
-                                        icon: 'error',
-                                        title: 'Lo sentimos...',
-                                        text: 'El correo ya se encuentra en uso!'
-                                        })
-                                    }
                                 }
-                                });
-                            }
-                        }else{
+                            });
+                        }).catch(function(error) {
+                        // Handle Errors here.
+                        var errorCode = error.code;
+                        var errorMessage = error.message;
+                        console.log(errorCode);
+                        console.log(errorMessage);
+                        // ...
+                        if(errorCode=="auth/invalid-email"){
                             Swal.fire({
                             icon: 'error',
                             title: 'Lo sentimos...',
-                            text: 'Las contraseñas no coinciden!'
+                            text: 'El correo invalido!'
                             })
+                        }else{
+                            if(errorCode=="auth/email-already-in-use"){
+                                Swal.fire({
+                                icon: 'error',
+                                title: 'Lo sentimos...',
+                                text: 'El correo ya se encuentra en uso!'
+                                })
+                            }
                         }
-                    }else{
-                        Swal.fire({
-                        icon: 'error',
-                        title: 'Lo sentimos...',
-                        text: 'Ya se encuentra alguien registrado con el ID inscrito!'
-                        })
+                        });
                     }
+                }else{
+                    Swal.fire({
+                    icon: 'error',
+                    title: 'Lo sentimos...',
+                    text: 'Las contraseñas no coinciden!'
+                    })
                 }
-            });
+            }
         });
     </script>
 </body>
-
 </html>
